--- a/public/index.html
+++ b/public/index.html
@@ -252,7 +252,7 @@ if (!doNotTrack) {
   <main id="main">
     <h1>Home</h1>
     <p>I&rsquo;m Hai Sam, a programming enthusiasm father, who love Go, Vue.js, React.js and other Web programming stuff.</p>
-<p>Here is <a href="https://drive.google.com/file/d/1oCuZGkw7BhlCRX0yk2Ky_hoNnUCyo7G4/view?usp=sharing">my Resume</a>. If you are interested, please do have a look.</p>
+<p>Here is <a href="https://drive.google.com/file/d/1oCuZGkw7BhlCRX0yk2Ky_hoNnUCyo7G4/view?usp=sharing">my Resume</a>.</p>
 
   </main>
 
